switch-next: Make it build with USE_SDL1

--- a/.editorconfig
+++ b/.editorconfig
@@ -20,6 +20,15 @@ end_of_line = lf
 [SourceX/storm/storm_dx.cpp]
 end_of_line = lf
 
+[SourceX/DiabloUI/*]
+end_of_line = lf
+
+[SourceX/DiabloUI/diabloui.cpp]
+end_of_line = crlf
+
+[touch/*]
+end_of_line = lf
+
 [*.yml]
 indent_style = space
 end_of_line = lf
